// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Text matches snapshot 1`] = `
<DocumentFragment>
  <p
    class="c-lnBPRo c-lnBPRo-jQkWJT-as-p decaText-root"
  />
</DocumentFragment>
`;

exports[`components/Text renders all lineHeights 1`] = `
<DocumentFragment>
  <p
    class="c-lnBPRo c-lnBPRo-jQkWJT-as-p c-lnBPRo-hVSCMQ-lineHeight-n decaText-root"
  >
    Children
  </p>
  <p
    class="c-lnBPRo c-lnBPRo-jQkWJT-as-p c-lnBPRo-kENwji-lineHeight-0 decaText-root"
  >
    Children
  </p>
  <p
    class="c-lnBPRo c-lnBPRo-jQkWJT-as-p c-lnBPRo-kbxdZX-lineHeight-1 decaText-root"
  >
    Children
  </p>
  <p
    class="c-lnBPRo c-lnBPRo-jQkWJT-as-p c-lnBPRo-bwqZvk-lineHeight-2 decaText-root"
  >
    Children
  </p>
  <p
    class="c-lnBPRo c-lnBPRo-jQkWJT-as-p c-lnBPRo-iwoKbl-lineHeight-3 decaText-root"
  >
    Children
  </p>
  <p
    class="c-lnBPRo c-lnBPRo-jQkWJT-as-p c-lnBPRo-guLIGy-lineHeight-4 decaText-root"
  >
    Children
  </p>
  <p
    class="c-lnBPRo c-lnBPRo-jQkWJT-as-p c-lnBPRo-fRvqxn-lineHeight-5 decaText-root"
  >
    Children
  </p>
  <p
    class="c-lnBPRo c-lnBPRo-jQkWJT-as-p c-lnBPRo-iBKVrw-lineHeight-6 decaText-root"
  >
    Children
  </p>
</DocumentFragment>
`;

exports[`components/Text renders all sizes 1`] = `
<DocumentFragment>
  <p
    class="c-lnBPRo c-lnBPRo-jQkWJT-as-p c-lnBPRo-iSJsTd-size-h1 decaText-root"
  >
    Children
  </p>
  <p
    class="c-lnBPRo c-lnBPRo-jQkWJT-as-p c-lnBPRo-fImtMF-size-h2 decaText-root"
  >
    Children
  </p>
  <p
    class="c-lnBPRo c-lnBPRo-jQkWJT-as-p c-lnBPRo-cjgGcF-size-h3 decaText-root"
  >
    Children
  </p>
  <p
    class="c-lnBPRo c-lnBPRo-jQkWJT-as-p c-lnBPRo-kEsGIF-size-h4 decaText-root"
  >
    Children
  </p>
  <p
    class="c-lnBPRo c-lnBPRo-jQkWJT-as-p c-lnBPRo-iUAjAV-size-h5 decaText-root"
  >
    Children
  </p>
  <p
    class="c-lnBPRo c-lnBPRo-jQkWJT-as-p c-lnBPRo-iCMAXq-size-h6 decaText-root"
  >
    Children
  </p>
  <p
    class="c-lnBPRo c-lnBPRo-jQkWJT-as-p c-lnBPRo-gpSXQN-size-body decaText-root"
  >
    Children
  </p>
  <p
    class="c-lnBPRo c-lnBPRo-jQkWJT-as-p c-lnBPRo-cqZFtv-size-bodySm decaText-root"
  >
    Children
  </p>
  <p
    class="c-lnBPRo c-lnBPRo-jQkWJT-as-p c-lnBPRo-ePSDQP-size-caption decaText-root"
  >
    Children
  </p>
  <p
    class="c-lnBPRo c-lnBPRo-jQkWJT-as-p c-lnBPRo-suMNG-size-footnote decaText-root"
  >
    Children
  </p>
</DocumentFragment>
`;

exports[`components/Text renders all variants 1`] = `
<DocumentFragment>
  <h1
    class="c-lnBPRo c-lnBPRo-cFWcZl-as-h1 decaText-root"
  >
    Children
  </h1>
  <h2
    class="c-lnBPRo c-lnBPRo-kKUNrJ-as-h2 decaText-root"
  >
    Children
  </h2>
  <h3
    class="c-lnBPRo c-lnBPRo-hlOZHJ-as-h3 decaText-root"
  >
    Children
  </h3>
  <h4
    class="c-lnBPRo c-lnBPRo-erFqON-as-h4 decaText-root"
  >
    Children
  </h4>
  <h5
    class="c-lnBPRo c-lnBPRo-cHMTHd-as-h5 decaText-root"
  >
    Children
  </h5>
  <h6
    class="c-lnBPRo c-lnBPRo-cpZldy-as-h6 decaText-root"
  >
    Children
  </h6>
  <span
    class="c-lnBPRo c-lnBPRo-jQkWJT-as-span decaText-root"
  >
    Children
  </span>
  <p
    class="c-lnBPRo c-lnBPRo-jQkWJT-as-p decaText-root"
  >
    Children
  </p>
  <blockquote
    class="c-lnBPRo c-lnBPRo-hfgHhY-as-blockquote decaText-root"
  >
    Children
  </blockquote>
  <b
    class="c-lnBPRo c-lnBPRo-jQkWJT-as-b decaText-root"
  >
    Children
  </b>
  <small
    class="c-lnBPRo c-lnBPRo-IpkNQ-as-small decaText-root"
  >
    Children
  </small>
  <del
    class="c-lnBPRo c-lnBPRo-jQkWJT-as-del decaText-root"
  >
    Children
  </del>
  <i
    class="c-lnBPRo c-lnBPRo-jQkWJT-as-i decaText-root"
  >
    Children
  </i>
  <em
    class="c-lnBPRo c-lnBPRo-jQkWJT-as-em decaText-root"
  >
    Children
  </em>
</DocumentFragment>
`;

exports[`components/Text renders sizes with variants 1`] = `
<DocumentFragment>
  <h1
    class="c-lnBPRo c-lnBPRo-cFWcZl-as-h1 c-lnBPRo-fImtMF-size-h2 decaText-root"
  >
    Children
  </h1>
</DocumentFragment>
`;
